--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,19 +26,20 @@ jobs:
       - run: gcloud config set auth/disable_credentials true
       - run: gcloud config set project sandbox
       - run: gcloud config set api_endpoint_overrides/spanner http://localhost:9020/
-      # - run: gcloud spanner instances create sandbox --config=emulator-config --description="sandbox instance" --nodes=1
+      # - run: gcloud spanner instances create sandbox --config=emulator-config --description="develop sandbox" --nodes=1
       # - run: gcloud spanner databases create sandbox --instances=sandbox
 
       # run tests
       - uses: actions/setup-go@v2
         with:
-          go-version: "1.16"
+          go-version: "1.17.x"
       - run: go version
       - run: go test -v ./...
         env:
           SPANNER_EMULATOR_HOST: localhost:9010
           SPANNER_DATABASE: projects/sandbox/instances/sandbox/databases/dansbox
-          SPANNER_MIGRATION: file://./../migrations
+          # for local (default)
+          # SPANNER_MIGRATION: file://./../migrations
           # for private
           # SPANNER_MIGRATION: github://user:${{ secrets.PERSONAL_ACCESS_TOKEN }}/repo/path#ref
           # for public
