--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: ["1.16.x", "1.17.x"]
 
     services:
       spanner_emulator:
@@ -14,6 +17,7 @@ jobs:
         ports:
           - 9010:9010
           - 9020:9020
+
     steps:
       - uses: actions/checkout@v2
 
@@ -32,9 +36,8 @@ jobs:
       # run tests
       - uses: actions/setup-go@v2
         with:
-          go-version: "1.17.x"
-      - run: go version
-      - run: go test -v ./...
+          go-version: ${{ matrix.go }}
+      - run: go test -v -coverprofile=profile.cov ./...
         env:
           SPANNER_EMULATOR_HOST: localhost:9010
           SPANNER_DATABASE: projects/sandbox/instances/sandbox/databases/dansbox
@@ -44,3 +47,19 @@ jobs:
           # SPANNER_MIGRATION: github://user:${{ secrets.PERSONAL_ACCESS_TOKEN }}/repo/path#ref
           # for public
           # SPANNER_MIGRATION: github://owner/repo/path#ref
+
+      - name: Send goveralls coverage
+        uses: shogo82148/actions-goveralls@v1
+        with:
+          path-to-profile: profile.cov
+          flag-name: Go-${{ matrix.go }}
+          parallel: true
+
+  check-coverage:
+    name: Check coverage
+    needs: [test]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: shogo82148/actions-goveralls@v1
+        with:
+          parallel-finished: true
